objects/OUV_Vehicle_Loan_Agreement__c.object
<CustomObject>
    <label>OUV Vehicle Loan Agreement</label>
    <nameField>
        <displayFormat>VLA-{0000000}</displayFormat>
        <label>OUV Vehicle Loan Agreement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OUV Vehicle Loan Agreements</pluralLabel>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>Cost_Per__c</fullName>
        <label>Cost Per</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>OUV_Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Hire_Lease__c</fullName>
        <description>Cost of Hire/Lease</description>
        <label>Hire/Lease</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <formula>(Hire_Lease__c + (Hire_Lease__c *  Statutory_VAT__c)) * Duration__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fiscal_Code__c</fullName>
        <formula>OUV_Frequent_Drivers__r.Fiscal_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Org_URL__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OUV Org URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Excess_Value__c</fullName>
        <label>Excess Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OUV_Greeting__c</fullName>
        <formula>IF(ISPICKVAL( Type_of_Driver__c , &quot;Business&quot;),  OUV_Company_Department__c ,  OUV_First_Name__c + &quot; &quot; +  OUV_Last_Name__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OUV Greeting</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_of_Birth__c</fullName>
        <formula>OUV_Frequent_Drivers__r.City_of_Birth__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City of Birth</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Statutory_VAT__c</fullName>
        <label>Statutory VAT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VLA_Signatory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VLA Signatory</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OUV_Vehicle_Loan_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <label>Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <label>Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_3__c</fullName>
        <label>Address Line 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Insured_by__c</fullName>
        <label>Insured by</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>OUV_Insured_By</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_Occupation__c</fullName>
        <label>Occupation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Driver__c</fullName>
        <label>Type of Driver</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_Fiscal_Code__c</fullName>
        <label>Fiscal Code</label>
        <length>175</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_City_of_Birth__c</fullName>
        <label>City of Birth</label>
        <length>175</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUV_Booking_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Booking Record</label>
        <referenceTo>OUV_Booking__c</referenceTo>
        <relationshipLabel>OUV Vehicle Loan Agreements</relationshipLabel>
        <relationshipName>OUV_Vehicle_Loan_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Public_Access_Code__c</fullName>
        <externalId>true</externalId>
        <label>Public Access Code</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Encrypted_Email__c</fullName>
        <label>Encrypted Email</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>OUV_Encrypted_Phone__c</fullName>
        <label>Encrypted Phone</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>OUV_Vehicle_Storage__c</fullName>
        <label>Vehicle Storage</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>VLA_Signatory_Email__c</fullName>
        <formula>VLA_Signatory__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VLA Signatory Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generate_Public_Code__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate Public Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OUV_Booking_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to track the Approval Status - used in PB</description>
        <label>OUV Booking Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OUV_Country_of_issue__c</fullName>
        <label>Country of issue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Encrypted_County__c</fullName>
        <label>Encrypted County</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>OUV_Frequent_Drivers__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Frequent Drivers</label>
        <referenceTo>OUV_Frequent_Drivers__c</referenceTo>
        <relationshipLabel>OUV Vehicle Loan Agreements</relationshipLabel>
        <relationshipName>OUV_Vehicle_Loan_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_Encrypted_Country__c</fullName>
        <label>Encrypted Country</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>OUV_Insurance_company__c</fullName>
        <label>Insurance company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Company_Department__c</fullName>
        <label>Company / Department</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OUV_Driving_Experience__c</fullName>
        <label>Driving Experience</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OUV_Encrypted_Postcode__c</fullName>
        <label>Encrypted Postcode</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>OUV_Licence_Start_Date__c</fullName>
        <label>Licence Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUV_Passport_ID_number__c</fullName>
        <label>Passport / ID number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Encrypted_Last_Name__c</fullName>
        <label>Encrypted Last Name</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>OUV_Encrypted_Town_City__c</fullName>
        <label>Encrypted Town / City</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>OUV_Licence_Expiry_Date__c</fullName>
        <label>Licence Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Driver_Feedback_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Automatic field to trigger the send of an email when the driver provides information via the submission portal</description>
        <label>Driver Feedback Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OUV_Encrypted_First_Name__c</fullName>
        <label>Encrypted First Name</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>OUV_Encrypted_Insured_by__c</fullName>
        <label>Encrypted Insured by</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>OUV_Encrypted_Occupation__c</fullName>
        <label>Encrypted Occupation</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Operating_costs_borne_by__c</fullName>
        <description>Operating costs, in particular fuel and oil, will be borne by</description>
        <inlineHelpText>Operating costs, in particular fuel and oil, will be borne by</inlineHelpText>
        <label>Operating costs borne by</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Borrower</fullName>
                </value>
                <value>
                    <fullName>Lender</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_Driver_License_Number__c</fullName>
        <label>Driver License Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Encrypted_Fiscal_Code__c</fullName>
        <label>Encrypted Fiscal Code</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>OUV_Encrypted_Street_Road__c</fullName>
        <label>Encrypted Street / Road</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Public_Access_Code_Expires__c</fullName>
        <label>Public Access Code Expires</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Generate_Public_Code_String__c</fullName>
        <formula>$Label.OUV_VLA_RequestInfo_Msg</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email request for Personal Information</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Booking_Approval_Status__c</fullName>
        <formula>TEXT(OUV_Booking_Record__r.OUV_BookingApprovalStatus__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OUV Booking Approval Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Encrypted_City_of_Birth__c</fullName>
        <label>Encrypted City of Birth</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>OUV_Encrypted_Date_of_Birth__c</fullName>
        <label>Encrypted Date of Birth</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>OUV_Insurance_policy_number__c</fullName>
        <label>Insurance policy number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maintenance_Inspection_Costs__c</fullName>
        <description>Any necessary maintenance or inspection during the period of the loan is to be undertaken at the cost of the</description>
        <inlineHelpText>Any necessary maintenance or inspection during the period of the loan is to be undertaken at the cost of the</inlineHelpText>
        <label>Maintenance/Inspection costs borne by</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Borrower</fullName>
                </value>
                <value>
                    <fullName>Lender</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_Encrypted_Address_Line_1__c</fullName>
        <label>Encrypted Address Line 1</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>OUV_Encrypted_Address_Line_2__c</fullName>
        <label>Encrypted Address Line 2</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>OUV_Encrypted_Address_Line_3__c</fullName>
        <label>Encrypted Address Line 3</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>OUV_Encrypted_Vehicle_Storage__c</fullName>
        <label>Encrypted Vehicle Storage</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>OUV_Encrypted_Country_of_issue__c</fullName>
        <label>Encrypted Country of issue</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>OUV_Encrypted_Insurance_company__c</fullName>
        <label>Encrypted Insurance company</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>OUV_Encrypted_Company_Department__c</fullName>
        <label>Encrypted Company / Department</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>OUV_Encrypted_Driving_Experience__c</fullName>
        <label>Encrypted Driving Experience</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>OUV_Encrypted_Licence_Start_Date__c</fullName>
        <label>Encrypted Licence Start Date</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>OUV_Encrypted_Passport_ID_number__c</fullName>
        <label>Encrypted Passport / ID number</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>OUV_Encrypted_Licence_Expiry_Date__c</fullName>
        <label>Encrypted Licence Expiry Date</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>OUV_Encrypted_Driver_License_Number__c</fullName>
        <label>Encrypted Driver License Number</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>OUV_Encrypted_Insurance_policy_number__c</fullName>
        <label>Encrypted Insurance policy number</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <recordTypes>
        <fullName>OUV_VLA_After_Encryption</fullName>
        <active>true</active>
        <description>Shows the VLA encrypted fields</description>
        <label>OUV VLA After Encryption</label>
    </recordTypes>
    <recordTypes>
        <fullName>OUV_VLA_Before_Encryption</fullName>
        <active>true</active>
        <description>Shows the VLA non-encrypted fields</description>
        <label>OUV VLA Before Encryption</label>
    </recordTypes>
    <recordTypes>
        <fullName>OUV_VLA_Information_Record_Type</fullName>
        <active>true</active>
        <label>OUV VLA Information Record Type</label>
    </recordTypes>
    <sharingReasons>
        <fullName>OUV_Site_Submission_Access__c</fullName>
        <label>Site Submission Access</label>
    </sharingReasons>
    <validationRules>
        <fullName>Cost_Of_Use_Values_Required</fullName>
        <active>true</active>
        <description>Statutory VAT, Cost Per and Excess Value are required when Hire/Lease is populated</description>
        <errorConditionFormula>NOT(ISBLANK(Hire_Lease__c)) &amp;&amp;  (ISBLANK(Statutory_VAT__c) ||  ISBLANK( TEXT(Cost_Per__c) ) ||  ISBLANK( Excess_Value__c ) ||  ISBLANK( Duration__c ) )</errorConditionFormula>
        <errorMessage>Statutory VAT, Cost Per, Excess Value and Duration are mandatory when Hire/Lease is populated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OUV_NOT_FrequentD_FirstLastName_Email</fullName>
        <active>true</active>
        <description>Makes the First Name, Last Name and Email field required if a Frequent Driver was not picked.</description>
        <errorConditionFormula>AND(
ISBLANK( OUV_Frequent_Drivers__c ), 
OR(
ISBLANK( OUV_First_Name__c ),
ISBLANK( OUV_Last_Name__c ),
ISBLANK( OUV_Email__c )),
OR(
ISBLANK( OUV_Encrypted_First_Name__c),
ISBLANK( OUV_Encrypted_Last_Name__c),
ISBLANK( OUV_Encrypted_Email__c)))</errorConditionFormula>
        <errorMessage>Please fill the First Name, Last Name and Email fields</errorMessage>
    </validationRules>
</CustomObject>